# backport_agent

./: .gitignore  AGENTS.md  excel_tool.py  file_check_tool.py  mcp_server.py  patch_tool.py  pr_tool.py  pyproject.toml  reinstall.example.txt  reinstall.iso.example.txt  requirements.txt
.cursor/: mcp.json
.cursor/rules/: commit-artifact-hygiene.mdc  python-develop.mdc
0a/6fe616b8d4/: metadata.json
1d/02cb769cd9/: metadata.json
29/fc1d056a2e/: metadata.json
44/532d3a14b6/: metadata.json
47/ec48e1415d/: metadata.json
49/d0e313ea80/: metadata.json
50/69c09c58cf/: metadata.json
55/a9579c298a/: metadata.json
59/c22d4f9b52/: metadata.json
73/d094f1c0f0/: metadata.json
78/448c8f6ce6/: metadata.json
7f/b9d4490ef6/: metadata.json
a1/be5e583400/: metadata.json
c6/ca31d446da/: metadata.json
cd/0df7b6be38/: metadata.json
config/: reinstall-input.example.json  reinstall.example.json  repos.json
scripts/: install.sh  setup-kernel-workspace.sh
src/specdeps/: __init__.py  cli.py  fetcher.py  graph.py  models.py  order.py  package_config.py  package_files.py  package_metadata.py  reinstall_apply_cli.py  reinstall_cli.py  reinstall_iso_cli.py  reinstall_json.py  reinstall_json_cli.py  reinstall_plan.py  reinstall_txt.py  (+7 more)
tests/: test_cli.py  test_fetcher.py  test_graph.py  test_order.py  test_package_config.py  test_package_files.py  test_package_metadata.py  test_reinstall_cli.py  test_reinstall_compat.py  test_reinstall_json.py  test_reinstall_plan.py  test_reinstall_txt.py  test_repo_config.py  test_report.py  test_spec_parser.py  test_topology.py
(+92 files in other folders)
