[project]
name = "specdeps"
version = "0.1.0"
description = "Extract install dependency topology from RPM spec repositories"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
specdeps = "specdeps.cli:main"
specdeps-reinstall = "specdeps.reinstall.cli:main"
specdeps-reinstall-json = "specdeps.reinstall.json_cli:main"
specdeps-txt-to-json = "specdeps.reinstall.txt_cli:main"
specdeps-iso-reinstall = "specdeps.reinstall.iso_cli:main"
specdeps-apply-reinstall = "specdeps.reinstall.apply_cli:main"
specdeps-source-reinstall = "specdeps.reinstall.source_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
